name:              blog
version:           0.2.1
cabal-version:     >= 1.8
license:           MIT
license-file:      LICENSE
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.Blog
                     Handler.Entry
                     Handler.EditEntry
                     Handler.NewEntry
                     Handler.DeleteEntry
                     Handler.DeleteComment
                     Handler.Feed
                     Handler.Categories
                     Handler.DeleteCategory
                     Handler.EditCategory
                     Handler.Users
                     Handler.Uploads
                     Handler.NewUpload
                     Handler.Upload
                     Handler.EditUser

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns

    build-depends: base                          >= 4  
                 , yesod                         >= 1.4
                 , yesod-core                    >= 1.4
                 , yesod-auth                    >= 1.4
                 , yesod-static                  >= 1.4
                 , yesod-form                    >= 1.4
                 , yesod-newsfeed                >= 1.4
                 , yesod-text-markdown           >= 0.1
                 , bytestring                    >= 0.9
                 , text                          >= 0.11
                 , markdown                      >= 0.1
                 , persistent                    >= 2.1
                 , persistent-postgresql         >= 2.1
                 , persistent-template           >= 2.1
                 , template-haskell
                 , shakespeare                   >= 2.0
                 , hjsmin                        >= 0.1
                 , monad-control                 >= 0.3
                 , wai-extra                     >= 3.0
                 , yaml                          >= 0.8
                 , http-conduit                  >= 2.1
                 , directory                     >= 1.1
                 , warp                          >= 3.0
                 , data-default
                 , aeson                         >= 0.6
                 , conduit                       >= 1.0
                 , monad-logger                  >= 0.3
                 , fast-logger                   >= 2.2.3
                 , wai-logger                    >= 2.2
                 , time                          >= 1.4
                 , blaze-html                    >= 0.7
                 , conduit
                 , conduit-combinators           >= 0.3
                 , temporary                     >= 1.2
                 , esqueleto
                 , gd
                 , resourcet

executable         blog
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , blog
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , blog
                 , yesod-test >= 1.2
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
